[package]
name    = "esamz"
version = "9.1.0"
edition = "2021"

[[bin]]
name = "esamz"
path = "src/main.rs"

[dependencies]
# ── Web framework ────────────────────────────────────────────────────────────
axum            = { version = "0.7",  features = ["macros"] }
axum-extra      = { version = "0.9",  features = ["cookie"] }
tower           = "0.4"
tower-http      = { version = "0.5",  features = ["cors"] }

# ── Async runtime ────────────────────────────────────────────────────────────
tokio           = { version = "1",    features = ["full"] }
tokio-stream    = { version = "0.1",  features = ["sync"] }
futures         = "0.3"
async-stream    = "0.3"

# ── HTTP client ──────────────────────────────────────────────────────────────
reqwest         = { version = "0.11", features = ["json", "stream"] }

# ── Serialization ────────────────────────────────────────────────────────────
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# ── Utilities ────────────────────────────────────────────────────────────────
uuid            = { version = "1",    features = ["v4"] }
rand            = "0.8"
regex           = "1"
once_cell       = "1"
chrono          = { version = "0.4",  features = ["serde"] }
hex             = "0.4"
bytes           = "1"
time            = "0.3"

# ── Logging / tracing ────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
