[package]
name = "esamz-backend"
version = "9.4.0"
edition = "2021"
authors = ["Alakmar Teenwala <esamzai365@gmail.com>"]
description = "eSAMz AI Backend — v9.4 RAG Edition"

[[bin]]
name = "esamz-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bytes / body streaming
bytes = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

# Session cookies
time = { version = "0.3", features = ["macros"] }

# JWT verification
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
